# docgen

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: merge-test.yml
app/include/: main_window.h  section_manager.h  text_section.h  text_viewer.h
app/src/: main.cpp  main_window.cpp  section_manager.cpp  text_section.cpp
doc/: ARCHITECTURE.md
doc/images/: architecture.puml
docs/: ARCHITECTURE.md  architecture.puml
docs/images/: architecture.puml  random_arrows.html
examples/: example_set1.docgenset  example_set1.md  example_set1.txt  text2.txt  text3.txt
include/: main_window.h  section_manager.h  text_section.h  text_viewer.h
lib/: README.md
resources/: docgen.gresource.xml  install_deps.sh
src/: main.cpp  main_window.cpp  section_manager.cpp  text_section.cpp  text_viewer.cpp
tests/: test_main.cpp  test_main_old.cpp
